@@ -1,4 +1,13 @@
+2002-05-30  Alasdair Allan <aa@astro.ex.ac.uk>
 
+        * t/query.t: Applied bug fix patch file for test harness
+          supplied by Sinan Kaan Yerli <sinan@sinan.physics.metu.edu.tr>
+
+2002-05-29  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * Query/Query.pm: Modification for special case RA and Dec 
+          returned by SIMBAD for large objects.
+          
 2001-12-03  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Query/Query.pm: Added conditional test to see if $base_url is
